--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,7 +20,7 @@
       <p class="lead">A tiny UI served by the application. Click the button to request the hello message from the Java backend.</p>
 
       <div>
-        <button id="btn">Get hello</button>
+        <button id="btn">Get Hello </button>
         <div id="result" class="msg" aria-live="polite">(no message yet)</div>
       </div>
 
