--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,7 +17,7 @@
   <body>
     <main class="wrap">
       <h1>Simple Java Maven App</h1>
-      <p class="lead">A tiny UI served by the application. Click the button to request the hello message from the Java backend.</p>
+      <p class="lead">A tiny UI served by the application. Click the button to request the hello message from the Java backend 😊.</p>
 
       <div>
         <button id="btn">Get Hello </button>
